[project]
name = "helltaker"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Xiao Yu", email = "nullopt_t@proton.me" }
]
dependencies = [
    "pyxel~=1.9.16",
    "numpy~=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
